# Snowflake

./: .clang-format  .gitignore  .gitmodules  .rosinstall  .travis.yml  .travis.yml.bak  PULL_REQUEST_TEMPLATE.md  README.md  README.md~  README_NEWMEMBERS.md  get_started.sh  imgui.ini  install_dependencies.sh  install_required.sh  nodelet_launch.sh  nodelets.md  pull-request-checklist.md  rosdep.yaml  run_ci.sh  setup_udev_rules.sh~  travis_ci.sh
setup_scripts/libphidget22-1.10.20220530/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  cppheader  libphidget22.la  libphidget22.pc  libphidget22.pc.in  library_version  libtool  phidget22.h
setup_scripts/libphidget22-1.10.20220530/.libs/: libphidget22.la  libphidget22.lai  libphidget22.so.0
setup_scripts/libphidget22-1.10.20220530/src/: analogsensor.c  analogsensor.h  analogsensor.lo  bridge.c  bridge.gen.c  bridge.gen.h  bridge.h  bridge.lo  bridgepackets.gen.c  bridgepackets.gen.h  bridgepackets.gen.lo  constants.c  constants.gen.h  constants.h  constants.lo  constantsinternal.h  datainterval.gen.c  datainterval.gen.lo  debug.c  debug.h  debug.lo  devices.c  devices.gen.c  devices.gen.h  devices.h  devices.lo  dispatch.c  dispatch.lo  enumutil.gen.c  enumutil.gen.h  enumutil.gen.lo  errorstrings.gen.c  errorstrings.gen.h  errorstrings.gen.lo  formatters.c  formatters.lo  gpp.c  gpp.h  gpp.lo  lightning.c  (+45 more)
src/cameras/: CAMERAS.md  CMakeLists.txt  package.xml
src/cameras/include/: ImageSaver.h
src/cameras/launch/: camera_viewer.launch  image_saving.launch  realsense.launch  realsense_both.launch  realsense_d415.launch  realsense_d435i.launch
src/cameras/src/: ImageSaver.cpp  image_saver.cpp  simple_web_pub.cpp
src/challenge/: CMakeLists.txt  package.xml
src/challenge/src/: solution.cpp
src/decision_igvc/: CMakeLists.txt  package.xml
src/decision_igvc/include/: FinalDecision.h  GpsDecision.h  GpsManager.h  GpsMover.h  LidarDecision.h  LidarObstacle.h  VisionDecision.h
src/decision_igvc/launch/: decision_igvc.launch  final_decision.launch  full_gps_manager.launch  gps_decision.launch  gps_manager.launch  lidar_decision.launch  qualification_gps_manager.launch  reactive_igvc2017.launch  vision_decision.launch  waypoint_navigation.launch
src/decision_igvc/src/: FinalDecision.cpp  GpsDecision.cpp  GpsManager.cpp  GpsMover.cpp  LidarDecision.cpp  LidarObstacle.cpp  VisionDecision.cpp  final_decision.cpp  gps_decision.cpp  gps_manager.cpp  lidar_decision.cpp  vision_decision.cpp
src/decision_igvc/test/: final-decision-test.cpp  gps-manager-test.cpp  gps-mover-test.cpp  lidar-decision-test.cpp  lidar-obstacle-test.cpp  lidar_decision_rostest.cpp  lidar_decision_rostest.test  vision-decision-test.cpp
src/drag_race/: CMakeLists.txt  package.xml
src/drag_race/include/: DragRaceController.h  DragRaceNode.h  LidarObstacle.h  LidarObstacleManager.h
src/drag_race/launch/: drag_race.launch
src/drag_race/src/: DragRaceController.cpp  DragRaceNode.cpp  LidarObstacle.cpp  LidarObstacleManager.cpp  drag_race_node.cpp
src/drag_race/test/: drag-race-controller-test.cpp  lidar-obstacle-manager-test.cpp  lidar-obstacle-test.cpp
src/drivers/: CMakeLists.txt  README.md  package.xml
src/drivers/include/: ArmDriver.h  EncoderOdometryNode.h  SerialDetection.h  SteeringDriver.h  USBDetection.h  UsbDetector.h
src/drivers/launch/: encoder_odometry_node.launch  encoders.launch  firmware_serial_driver.launch  gps_driver.launch  imu.launch  phidget_encoders.launch  sensor_stack.launch  sick_lidar.launch  steering_driver.launch
src/drivers/src/: ArmDriver.cpp  EncoderOdometryNode.cpp  SerialDetection.cpp  SteeringDriver.cpp  USBDetection.cpp  UsbDetector.cpp  arm_driver.cpp  encoder_odometry_node.cpp  gps_driver.cpp  steering_driver.cpp  usb_detection.cpp
src/drivers/test/: encoder_odometry_node.test  encoder_odometry_node_rostest.cpp  steering-driver-test.cpp
src/elsa_vision/: CMakeLists.txt  package.xml
src/elsa_vision/src/: IPM.cpp  IPM.h  filter.cpp  filter.h  image_stitcher.cpp  ros_vision.cpp
src/lane_follow/: CMakeLists.txt  package.xml
src/lane_follow/include/: LaneFollow.h  LineDetect.h
src/lane_follow/launch/: circuit_race.launch
src/lane_follow/src/: LaneFollow.cpp  LineDetect.cpp  lane_follow.cpp
src/lane_follow/test/: lane-follow-test.cpp  line-detect-test.cpp
src/lane_follow_iarrc/: CMakeLists.txt  ost.yaml  package.xml
src/lane_follow_iarrc/include/: LaneFollow.h  LineDetect.h
src/lane_follow_iarrc/launch/: circuit_race.launch  circuit_race_camera.launch  lane_follow.launch
src/lane_follow_iarrc/src/: LaneFollow.cpp  LineDetect.cpp  lane_follow.cpp
src/lane_follow_iarrc/test/: lane-follow-test.cpp  line-detect-test.cpp
src/localisation/: CMakeLists.txt  README.md  package.xml
src/localisation/include/: EKF.h  EKFNode.h
src/localisation/launch/: ekf.launch  ekf_node.launch  localisation.launch  robot_pose_ekf.launch
src/localisation/src/: EKF.cpp  EKFNode.cpp  ekf.cpp  ekf_node.cpp
src/localisation/test/: ekf-node-test.cpp  ekf-test.cpp  ekf_node_rostest.cpp  ekf_node_test.test  ekf_rostest.cpp  ekf_test.test
src/map/: CMakeLists.txt  package.xml
src/map/include/: Map.h  MapCombiner.h
src/map/launch/: sim_and_map.launch  test_rosbag.launch
src/map/src/: Map.cpp  MapCombiner.cpp  map.cpp  test_point_publisher.cpp  transformTest.cpp
src/map/test/: test_map_publishers.cpp
src/mapping_igvc/: CMakeLists.txt  package.xml
src/mapping_igvc/include/: ObstacleManager.h  ObstacleManagerNode.h  spline.h
src/mapping_igvc/launch/: obstacle_manager.launch
src/mapping_igvc_msgs/: CMakeLists.txt  package.xml
src/mapping_msgs_urc/: CMakeLists.txt  package.xml
src/mapping_urc/: CMakeLists.txt  package.xml
src/motor_control_circ/: CMakeLists.txt  package.xml
src/pathfinding_igvc/: CMakeLists.txt  package.xml
src/procontroller_snowbots/: CMakeLists.txt  package.xml
src/rc_broker/: CMakeLists.txt  package.xml
src/reactive_system_urc/: CMakeLists.txt  package.xml
src/sb_all_controller/: CMakeLists.txt  package.xml
(+1571 files in other folders)
